--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "bcrypt": "^5.0.1",
     "connect-session": "^0.0.1",
     "cookie-parser": "^1.4.6",
+    "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.1",
     "multer": "^1.4.5-lts.1",
-    "serialport": "^10.4.0"
+    "serialport": "^10.4.0",
+    "socket.io": "^4.5.2"
   }
 }
