--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^6.6.1",
     "multer": "^1.4.5-lts.1",
     "serialport": "^10.4.0",
-    "socket.io": "^4.5.2"
+    "socket.io": "^4.5.2",
+    "workerpool": "^6.2.1"
   }
 }
